// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query Get FlightLog tests getAllAircraft returns all aircraft in the db 1`] = `
[
  {
    "created_at": Any<Date>,
    "created_by": "admin",
    "display_name": "Diamond DA40",
    "elt_cert_expiry": "2025-02-01",
    "engine_hours_remaining_before_tbo": "299.50",
    "engine_tbo_hours": 2000,
    "equipment": "SFDY",
    "gps_cert_expiry": "2025-03-15",
    "harness_expiry": "2026-01-01",
    "hourly_rate_eur": "180.00",
    "hours_at_last_engine_overhaul": "1500.00",
    "hours_at_last_prop_overhaul": "1800.00",
    "insurance_cert_expiry": "2024-12-31",
    "last_100hr": "2024-02-10",
    "last_100hr_tach": "3100.00",
    "last_50hr": "2024-03-05",
    "last_50hr_tach": "3150.00",
    "last_annual": "2024-01-15",
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "next_100hr_tach": "3200.00",
    "next_50hr_tach": "3200.00",
    "next_annual": "2025-01-15",
    "prop_hours_remaining_before_tbo": "999.50",
    "prop_tbo_hours": 2400,
    "radio_cert_expiry": "2025-06-30",
    "registration": "OH-STL",
    "total_hours": "3200.50",
    "transponder_cert_expiry": "2025-01-01",
    "updated_at": Any<Date>,
    "updated_by": "admin",
    "year_of_manufacture": 2015,
  },
  {
    "created_at": Any<Date>,
    "created_by": "admin",
    "display_name": "Diamond DV20",
    "elt_cert_expiry": "2025-01-15",
    "engine_hours_remaining_before_tbo": "299.75",
    "engine_tbo_hours": 2400,
    "equipment": "SF",
    "gps_cert_expiry": "2025-06-20",
    "harness_expiry": "2026-03-10",
    "hourly_rate_eur": "160.00",
    "hours_at_last_engine_overhaul": "2000.50",
    "hours_at_last_prop_overhaul": "2100.25",
    "insurance_cert_expiry": "2024-11-30",
    "last_100hr": "2024-03-01",
    "last_100hr_tach": "4000.00",
    "last_50hr": "2024-04-10",
    "last_50hr_tach": "4050.00",
    "last_annual": "2024-02-20",
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "next_100hr_tach": "4100.00",
    "next_50hr_tach": "4100.00",
    "next_annual": "2025-02-20",
    "prop_hours_remaining_before_tbo": "-0.50",
    "prop_tbo_hours": 2000,
    "radio_cert_expiry": "2025-05-31",
    "registration": "OH-IHQ",
    "total_hours": "4100.75",
    "transponder_cert_expiry": "2024-12-01",
    "updated_at": Any<Date>,
    "updated_by": "admin",
    "year_of_manufacture": 2010,
  },
  {
    "created_at": Any<Date>,
    "created_by": "admin",
    "display_name": "Piper PA-28",
    "elt_cert_expiry": "2026-03-10",
    "engine_hours_remaining_before_tbo": "-200.30",
    "engine_tbo_hours": 2000,
    "equipment": "SFD",
    "gps_cert_expiry": "2025-08-20",
    "harness_expiry": "2026-04-01",
    "hourly_rate_eur": "140.00",
    "hours_at_last_engine_overhaul": "3000.00",
    "hours_at_last_prop_overhaul": "3100.00",
    "insurance_cert_expiry": "2025-07-01",
    "last_100hr": "2024-04-15",
    "last_100hr_tach": "5150.00",
    "last_50hr": "2024-05-20",
    "last_50hr_tach": "5180.00",
    "last_annual": "2024-03-10",
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "next_100hr_tach": "5250.00",
    "next_50hr_tach": "5230.00",
    "next_annual": "2025-03-10",
    "prop_hours_remaining_before_tbo": "299.70",
    "prop_tbo_hours": 2400,
    "radio_cert_expiry": "2025-12-15",
    "registration": "OH-P28",
    "total_hours": "5200.30",
    "transponder_cert_expiry": "2026-02-01",
    "updated_at": Any<Date>,
    "updated_by": "admin",
    "year_of_manufacture": 2005,
  },
]
`;

exports[`Db query Get FlightLog tests getAllAircraftByRegistraion returns the aircraft in the db 1`] = `
{
  "created_at": Any<Date>,
  "created_by": "admin",
  "display_name": "Diamond DA40",
  "elt_cert_expiry": "2025-02-01",
  "engine_hours_remaining_before_tbo": "299.50",
  "engine_tbo_hours": 2000,
  "equipment": "SFDY",
  "gps_cert_expiry": "2025-03-15",
  "harness_expiry": "2026-01-01",
  "hourly_rate_eur": "180.00",
  "hours_at_last_engine_overhaul": "1500.00",
  "hours_at_last_prop_overhaul": "1800.00",
  "insurance_cert_expiry": "2024-12-31",
  "last_100hr": "2024-02-10",
  "last_100hr_tach": "3100.00",
  "last_50hr": "2024-03-05",
  "last_50hr_tach": "3150.00",
  "last_annual": "2024-01-15",
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "next_100hr_tach": "3200.00",
  "next_50hr_tach": "3200.00",
  "next_annual": "2025-01-15",
  "prop_hours_remaining_before_tbo": "999.50",
  "prop_tbo_hours": 2400,
  "radio_cert_expiry": "2025-06-30",
  "registration": "OH-STL",
  "total_hours": "3200.50",
  "transponder_cert_expiry": "2025-01-01",
  "updated_at": Any<Date>,
  "updated_by": "admin",
  "year_of_manufacture": 2015,
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs between start and end date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-P28",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 4,
  "arrival_airport": "EFHK",
  "billable_member_id": 2,
  "billing_remarks": "N/A",
  "block_mins": 155,
  "block_time": "02:35",
  "created_at": Any<Date>,
  "created_by": 7,
  "crew2_member_id": 4,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 110,
  "flight_time": "01:50",
  "flight_type": "SAR",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "55.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 75,
  "invoice_number": "INV003",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-04T13:20:00.000Z,
  "night_flying_mins": 60,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 3,
  "off_block_time_utc": 2025-03-04T11:00:00.000Z,
  "oil_uplift_litres": "1.20",
  "on_block_time_utc": 2025-03-04T13:35:00.000Z,
  "personal_remarks": "Cargo delivery",
  "persons_on_board": 5,
  "pic_member_id": 3,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-04T11:30:00.000Z,
  "total_time_in_service": "1.74",
  "updated_at": Any<Date>,
  "updated_by": 7,
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for end date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 2,
  "arrival_airport": "EFTU",
  "billable_member_id": 5,
  "billing_remarks": "Night navigation exercise",
  "block_mins": 125,
  "block_time": "02:05",
  "created_at": Any<Date>,
  "created_by": 6,
  "crew2_member_id": 8,
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "NAV",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "45.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 60,
  "invoice_number": "INV004",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2024-03-12T01:00:00.000Z,
  "night_flying_mins": 115,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2024-03-11T23:05:00.000Z,
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": 2024-03-12T01:10:00.000Z,
  "personal_remarks": "Cross-day night flight",
  "persons_on_board": 2,
  "pic_member_id": 7,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2024-03-11T23:15:00.000Z,
  "total_time_in_service": "1.92",
  "updated_at": Any<Date>,
  "updated_by": 6,
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for specific member id should match snapshot 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<Date>,
  "created_by": 10,
  "crew2_member_id": 7,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-01T10:00:00.000Z,
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2025-03-01T08:00:00.000Z,
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": 2025-03-01T10:15:00.000Z,
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": 6,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-01T08:15:00.000Z,
  "total_time_in_service": "2.00",
  "updated_at": Any<Date>,
  "updated_by": 10,
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for start date should match snapshot 1`] = `
{
  "aircraft_registration": "OH-P28",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 4,
  "arrival_airport": "EFHK",
  "billable_member_id": 2,
  "billing_remarks": "N/A",
  "block_mins": 155,
  "block_time": "02:35",
  "created_at": Any<Date>,
  "created_by": 7,
  "crew2_member_id": 4,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 110,
  "flight_time": "01:50",
  "flight_type": "SAR",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "55.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 75,
  "invoice_number": "INV003",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-04T13:20:00.000Z,
  "night_flying_mins": 60,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 3,
  "off_block_time_utc": 2025-03-04T11:00:00.000Z,
  "oil_uplift_litres": "1.20",
  "on_block_time_utc": 2025-03-04T13:35:00.000Z,
  "personal_remarks": "Cargo delivery",
  "persons_on_board": 5,
  "pic_member_id": 3,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-04T11:30:00.000Z,
  "total_time_in_service": "1.74",
  "updated_at": Any<Date>,
  "updated_by": 7,
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs with Captain and copilot should return filtered logs 1`] = `
{
  "aircraft_registration": "OH-IHQ",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 2,
  "arrival_airport": "EFTP",
  "billable_member_id": 3,
  "billing_remarks": "N/A",
  "block_mins": 150,
  "block_time": "02:30",
  "created_at": Any<Date>,
  "created_by": 9,
  "crew2_member_id": 9,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 120,
  "flight_time": "02:00",
  "flight_type": "MAT",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "60.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 60,
  "invoice_number": "INV002",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": 2025-03-02T11:20:00.000Z,
  "night_flying_mins": 45,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 2,
  "off_block_time_utc": 2025-03-02T09:00:00.000Z,
  "oil_uplift_litres": "2.00",
  "on_block_time_utc": 2025-03-02T11:30:00.000Z,
  "personal_remarks": "Training flight",
  "persons_on_board": 2,
  "pic_member_id": 8,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-02T09:20:00.000Z,
  "total_time_in_service": "2.00",
  "updated_at": Any<Date>,
  "updated_by": 9,
}
`;

exports[`Db query insert tests insertFlightLog inserts a new flight log to the db, querying using returned flight id returns the row, row can be deleted using flight id 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_number": 1,
  "arrival_airport": "EFVA",
  "billable_member_id": 1,
  "billing_remarks": "Test flight",
  "block_mins": 75,
  "block_time": "01:15",
  "created_at": Any<Date>,
  "created_by": 1,
  "crew2_member_id": 7,
  "crew2_role": null,
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 60,
  "flight_time": "01:00",
  "flight_type": "KOU",
  "fuel_remaining_litres": "22.00",
  "fuel_uplift_litres": "100.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 0,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": 2025-03-10T05:15:00.000Z,
  "night_flying_mins": 0,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": 2025-03-10T04:05:00.000Z,
  "oil_uplift_litres": "5.00",
  "on_block_time_utc": 2025-03-10T05:20:00.000Z,
  "personal_remarks": "No remarks",
  "persons_on_board": 4,
  "pic_member_id": 2,
  "pic_role": "FE",
  "priv_or_com_flight": "P",
  "status": "NEW",
  "takeoff_time_utc": 2025-03-10T04:15:00.000Z,
  "total_time_in_service": "1023.50",
  "updated_at": Any<Date>,
  "updated_by": 1,
}
`;
